[package]
name = "adventofcode-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1-1"
path = "src/01/1-1.rs"

[[bin]]
name = "1-2"
path = "src/01/1-2.rs"

[[bin]]
name = "2-1"
path = "src/02/2-1.rs"

[[bin]]
name = "2-2"
path = "src/02/2-2.rs"

[[bin]]
name = "3-1"
path = "src/03/3-1.rs"

[[bin]]
name = "3-2"
path = "src/03/3-2.rs"

[dependencies]
itertools = "0.10.1"
